--- a/edc-gear-starter/react-app/src/components/SearchBar/Search.css
+++ b/edc-gear-starter/react-app/src/components/SearchBar/Search.css
@@ -11,6 +11,7 @@
     opacity: .7;
     padding: 3px;
     padding-left: 8px;
+    margin-right: 50px;
 }
 
 #search-input:focus {
